@@ -73,6 +73,8 @@ at 32767. Originally reported with Firefox and Thunderbird 17.0 [Michael Pantele
 @item Fixed grabbing key-bindings in SawfishConfig. [Christopher Bratusek]
 
 @item Fixed non-working @code{$height-content} and @code{$width-content} in the mxflat theme [Robert Zenz]
+
+@item Fixed remembering all window properties after switching workspaces [fuchur]
 @end itemize
 
 @item New Features
