@@ -15,7 +15,10 @@
 
 	* lisp/sawfish/wm/tabs/tabgroup.jl
 	* lisp/sawfish/wm/match-window.jl: add force-tab window-matcher,
-	forcing a window to be tabbed
+	forcing a window to be tabbed [fuchur]
+
+	* lisp/sawfish/wm/workspace.jl: remember window properties after
+	switching workspaces (especially unmaximize-geometry and such) [fuchur]
 
 2013-05-02  Vedat Hallac <vedat@hallac.net>
 	* lisp/sawfish/gtk/widget.jl: fix make-choice-item to properly support
